Revision history for CGI-Info

0.63
	When preventing SQL injection or XSS, don't return any parameters, since
		it's best to assume everything is poisoned

0.62	Wed 21 Dec 09:28:36 EST 2016
	Added status() method
	Set maximum file upload size to 512K

0.61	Thu  1 Dec 21:46:44 EST 2016
	Missed bin/* from the MANIFEST

0.60	Thu Dec  1 14:42:37 EST 2016
	Handle JSON POST data
	AUTOLOAD parameters
	Added the cookie() method
	Added Appveyor support to CI test on Windows
	Added tests that the framework to allow CGI scripts to be tested from
		the command line work
	Added Travis and Coveralls integration
	Mark some SEO scanners as robots
	On unknown input, debug what it is
	Added seznambot as a search engine

0.59	Tue Apr 12 17:38:03 EDT 2016
	Log the IP address of client attempting SQL injection
	H::B says robot() returns undef if it's not a robot; but sometimes it returns 0
	Bump minimum HTTP::Browserdetect to ensure bingbot is found

0.58	Sat Dec 26 10:12:47 EST 2015
	Support allowed list of arguments changing, this is useful for -
		$my action = $info->param('action');
		my %allowed;
		if($action eq 'action1') {
			%allowed = ('foo' => qr(\d+));
		} else {
			%allowed = ('bar' => qr(\d+));
		}
		my $params = $info->params(allowed => \%allowed);
			
0.57	Sun Oct 25 15:43:05 EDT 2015
	Reduce attack false positives
	Don't add an argument if it's already there
	--search-engine and --mobile didn't work
	Less harsh SQL injection tests, there were too many false positives
	Tabletsare no longer considered mobile phones
	params now returns undef if no arguments were given
	Pretend Facebookexternal (used to prefetch pages for
		display) is a search_engine.
	Don't mark search engines as robots

0.56	Sun Aug 16 20:05:27 EDT 2015
	Catch XML read failures
	Twitterbot is a robot
	Catch more injection attempts

0.55	Thu Jun 11 17:33:10 EDT 2015
	protocol() - Don't warn when not running as a CGI script
	Added more explicit catching of XSS and SQL injection attempts
