@@ -56,6 +56,10 @@ Takes optional parameter logger, an object which is used for warnings
 Takes optional parameter cache, an object which is used to cache IP lookups.
 This cache object is an object that understands get() and set() messages,
 such as a L<CHI> object.
+
+Takes optional parameter max_upload, which is the maximum file size you can upload (0 for no limit),
+the default is 512M
+
 =cut
 
 our $stdin_data;	# Class variable storing STDIN in case the class
@@ -79,6 +83,7 @@ sub new {
 		_allow => $args{allow} ? $args{allow} : undef,
 		_expect => $args{expect} ? $args{expect} : undef,
 		_upload_dir => $args{upload_dir} ? $args{upload_dir} : undef,
+		_max_upload_size => $args{max_upload_size} || 512 * 1024,
 		_logger => $args{logger},
 		_syslog => $args{syslog},
 		_cache => $args{cache},	# e.g. CHI
@@ -532,7 +537,7 @@ sub params {
 			return;
 		}
 		my $content_length = $ENV{'CONTENT_LENGTH'};
-		if($content_length > 512 * 1042) {	# Set maximum posts
+		if($content_length > $self->{_max_upload_size}) {	# Set maximum posts
 			# TODO: Design a way to tell the caller to send HTTP
 			# status 413
 			$self->{_status} = 413;
